--- a/index.html
+++ b/index.html
@@ -6,51 +6,17 @@
     <title>Formularios</title>
 </head>
 <body>
-    <form action="Formularios.html">
-        <label for="nombre">
-            Nombre del usuario
-        </label>
-        <br>
-        <input type="text" required name="nombre" id="nombre">
-        <br>
-        <label for="Apellidoa">
-            Apellidos
-        </label>
-        <br>
-        <input type="text" required name="Apellidos" id="Apellidos">
-        <br>
-        <label for="Email">
-            Correo electronico
-        </label>
-        <br>
-        <input type="email" required name="Email" id="Email">
-        <br>
-        <label for="Contraseña">
-            Contraseña
-        </label>
-        <br>
-        <input type="password" required name="Contraseña" id="Contraseña">
-        <br>
-        <label for="Dirección">
-            Dirección
-        </label>
-        <br>
-        <input type="text" required name="Dirección" id="Dirección">
-        <br>
-        <label for="busqueda">
-            Busqueda
-        </label>
-        <br>
-        <input type="search" required name="Buscar" id="Buscar">
-        <br>
-        <label for="URL">
-            URL
-        </label>
-        <input type="url" name="Url" id="Url">
-        <br>
-        <br>
-        <input type="submit" value="Enviar datos">
 
-    </form>
+    <h1>TAREAS 2 DEL PARCIAL</h1>
+    
+    <h2>Formularios</h2>
+    <a href="Enviardatosaformulario.html"></a>
+
+    <h2>Tablas Con Estilos</h2>
+    <a href="Table.html"></a>
+
+    <h2>Menu con listas</h2>
+    <a href="Table2.html"></a>
+
 </body>
 </html>
