--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>TAREAS 2 DEL PARCIAL</h1>
     
     <h2>Formularios</h2>
-    <a href="Enviardatosaformulario.html"></a>
+    <a href="Enviardatosaformulario.html">Link Formularios</a>
 
     <h2>Tablas Con Estilos</h2>
-    <a href="Table.html"></a>
+    <a href="Table.html">link tabla con Estilos</a>
 
     <h2>Menu con listas</h2>
-    <a href="Table2.html"></a>
+    <a href="Table2.html">tabla interactiva</a>
 
 </body>
 </html>
